@@ -1,3 +1,3 @@
-@set UPDATED 12 January 2001
+@set UPDATED 30 January 2001
 @set EDITION 0.02
 @set VERSION 0.02
